// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label:X 1`] = `
.c0 {
  text-anchor: middle;
}

<text
  class="x-axis-label c0"
  height="10"
  width="10"
  x="5"
  y="30"
/>
`;

exports[`Label:Y 1`] = `
.c0 {
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<text
  class="y-axis-label c0"
  height="10"
  width="10"
  x="-5"
  y="-16"
/>
`;
